// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - nevybrané; někdo jiný 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-zabrane"
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
  >
    10
  </div>
</div>
`;

exports[`Renderer - vybrané 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-vybrane"
    onClick={[Function]}
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
  >
    10
  </div>
</div>
`;

exports[`Renderer 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-zabrane"
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
  >
    10
  </div>
</div>
`;

exports[`renders VyberStartCislo 1`] = `
<Connect(StartovniCislaProTyp)
  Renderer={[Function]}
  jenStartujici={false}
  odstartovani={false}
  onSelect={[MockFunction]}
  typ="koloběžka"
/>
`;
